# backend/internal/interface/http/user_handler.go
@@ -24,7 +24,7 @@ func NewUserHandler(repo domain.UserRepository) *UserHandler {
 // @Produce json
 // @Success 200 {array} domain.User
 // @Failure 500 {object} errors.AppError
-// @Router /api/users [get]
+// @Router /users [get]
 func (h *UserHandler) ListUsers(c *gin.Context) {
 	users, err := h.repo.List()
 	if err != nil {
@@ -44,7 +44,7 @@ func (h *UserHandler) ListUsers(c *gin.Context) {
 // @Success 201 {object} domain.User
 // @Failure 400 {object} errors.AppError
 // @Failure 500 {object} errors.AppError
-// @Router /api/users [post]
+// @Router /users [post]
 func (h *UserHandler) CreateUser(c *gin.Context) {
 	var user domain.User
 	if err := c.ShouldBindJSON(&user); err != nil {
@@ -71,7 +71,7 @@ func (h *UserHandler) CreateUser(c *gin.Context) {
 // @Success 200 {object} domain.User
 // @Failure 400 {object} errors.AppError
 // @Failure 500 {object} errors.AppError
-// @Router /api/users/{id} [put]
+// @Router /users/{id} [put]
 func (h *UserHandler) UpdateUser(c *gin.Context) {
 	id, _ := strconv.Atoi(c.Param("id"))
 	var user domain.User
@@ -97,7 +97,7 @@ func (h *UserHandler) UpdateUser(c *gin.Context) {
 // @Param id path int true "User ID"
 // @Success 204 "No Content"
 // @Failure 500 {object} errors.AppError
-// @Router /api/users/{id} [delete]
+// @Router /users/{id} [delete]
 func (h *UserHandler) DeleteUser(c *gin.Context) {
 	id, _ := strconv.Atoi(c.Param("id"))
 	if err := h.repo.Delete(uint(id)); err != nil {
